定义一个简化的proto文件，构造交易（HEX）-->用IOT设备发送16进制数据，对接受到的数据进行反序列化，并进行验证签名，修改BitcoinAddr计算函数的参数

--- a/conf/system.conf
+++ b/conf/system.conf
@@ -78,6 +78,8 @@ system {
   
   httpServicePort = 8081//http服务的端口号，默认为8081
 
+  udpServicePort = 12345 // udp服务的端口号
+
   checkCertValidate = 0//设置是否检查证书的有效性，默认为0  0=不校验，1=校验
   	
   contractOperationMode = 0//设置合约的运行方式，0=debug方式，1=deploy，默认为debug方式，如果发布部署，必须使用deploy方式。
