--- a/conf/system.conf
+++ b/conf/system.conf
@@ -1,4 +1,4 @@
-﻿akka {
+akka {
   actor {
     warn-about-java-serializer-usage = off//关闭Java序列化来序列化消息时的警告，建议不要开启。如果开启，开启值=on
     default-mailbox {
@@ -114,7 +114,7 @@ system {
 
   transaction {
     //辅助自动创建交易的间隔
-    tran_create_dur = 100 //millis
+    tran_create_dur = 10000 //millis
     //最大交易缓存量
     max_cache_num = 60000
   }
