--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,22 @@
+kamon.util.filters {
+  "akka.tracked-actor" {
+    includes = [ "**" ]
+    excludes = [ "helloAkka/user/howdyGreeter" ]
+  }
+
+  "akka.tracked-dispatcher" {
+    includes = [ "**" ]
+  }
+
+  "akka.traced-actor" {
+    includes = [ "**" ]
+  }
+
+  "test" {
+    includes = [ "**" ]
+  }
+}
+
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   # Options: ERROR, WARNING, INFO, DEBUG
