--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,32 @@
+kamon {
+  statsd {
+    hostname = "127.0.0.1"
+    port = 32769
+   }
+	zipkin {
+	  host = "localhost"
+	  port = 32773
+	}  
+}
+
+kamon.util.filters {
+  "akka.tracked-actor" {
+    includes = [ "**" ]
+  }
+
+  "akka.tracked-dispatcher" {
+    includes = [ "**" ]
+  }
+
+  "akka.traced-actor" {
+    includes = [ "**" ]
+  }
+
+  "test" {
+    includes = [ "**" ]
+  }
+}
+
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   # Options: ERROR, WARNING, INFO, DEBUG
