--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   # Options: ERROR, WARNING, INFO, DEBUG
-  loglevel = "INFO"
+  loglevel = "WARNING"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 
   cluster {
